<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundku"
    tools:context=".fragment.HomeFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="389dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/balthazar"
        android:text="@string/appintro"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/birumuda"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/balthazar"
        android:text="@string/chooseplease"
        android:textAlignment="center"
        android:textColor="@color/birumuda"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_jarak"
        android:layout_width="143dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:background="@color/birumuda"
        android:drawableLeft="@drawable/ic_ruler"
        android:fontFamily="@font/balthazar"
        android:text="@string/jarak"
        android:textColor="@color/backgroundku"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_massa"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_massa"
        android:layout_width="143dp"
        android:layout_height="53dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:background="@color/birumuda"
        android:drawableLeft="@drawable/ic_kg"
        android:fontFamily="@font/balthazar"
        android:text="@string/massa"
        android:textColor="@color/backgroundku"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_suhu"
        android:layout_width="143dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/birumuda"
        android:drawableLeft="@drawable/ic_celsius"
        android:fontFamily="@font/balthazar"
        android:text="@string/suhu"
        android:textColor="@color/backgroundku"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_volume"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_jarak" />

    <Button
        android:id="@+id/btn_volume"
        android:layout_width="143dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/birumuda"
        android:drawableLeft="@drawable/ic_cube"
        android:fontFamily="@font/balthazar"
        android:text="@string/volume"
        android:textColor="@color/backgroundku"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_massa" />
</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>