<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="jarakViewModel"
            type="org.d3if4018.convertyounit.viewmodel.JarakViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundku"
        tools:context=".fragment.JarakFragment">


        <EditText
            android:id="@+id/et_inputnilai"
            android:layout_width="153dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/spinnerjarak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerjarak"
            android:layout_width="153dp"
            android:layout_height="43dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/birumuda"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_milimtr"
            android:layout_width="153dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/kosong"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="153dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:text="@string/mm"
            android:textColor="@color/birumuda"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="153dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:text="@string/cm"
            android:textColor="@color/birumuda"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/tv_cm"
            android:layout_width="153dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/kosong"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/tv_textdm"
            android:layout_width="153dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:text="@string/dm"
            android:textColor="@color/birumuda"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_m"
            android:layout_width="153dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/kosong"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintHorizontal_bias="0.565"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="153dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:text="@string/km"
            android:textColor="@color/birumuda"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/tv_dm"
            android:layout_width="153dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/kosong"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_textdm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_km"
            android:layout_width="153dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/kosong"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.407"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="153dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:text="@string/m"
            android:textColor="@color/birumuda"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="8dp"
            android:background="@color/birumuda"
            app:layout_constraintTop_toBottomOf="@+id/tv_milimtr" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="8dp"
            android:background="@color/birumuda"
            app:layout_constraintTop_toBottomOf="@+id/et_inputnilai"
            tools:layout_editor_absoluteX="-16dp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="8dp"
            android:background="@color/birumuda"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="8dp"
            android:background="@color/birumuda"
            app:layout_constraintTop_toBottomOf="@+id/tv_m"
            tools:layout_editor_absoluteX="16dp" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="8dp"
            android:background="@color/birumuda"
            app:layout_constraintTop_toBottomOf="@+id/tv_dm"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:background="@color/birumuda"
            android:text="@string/konversi"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            app:layout_constraintVertical_bias="0.139" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>